[java] IDEA-303491 Support --add-reads compiler argument
(cherry picked from commit 530d3dbc7d8035f04ef32609e466f61a9c4d616c)

IJ-CR-103746

GitOrigin-RevId: e2d2da0956af5720538abc7592b0d313dccee124